Commit from Home: works with MySQL only, not pretty!

--- a/src/main/resources/templates/allStudents.html
+++ b/src/main/resources/templates/allStudents.html
@@ -32,7 +32,7 @@
     </table>
 
     <div>
-        <p><a href="/">Home</a></p>
+        <!--<p><a href="/">Home</a></p>-->
         <p><a href="/enterStudent">Add New Student</a></p>
     </div>
 
