--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -60,14 +60,14 @@
        <div class="container" align="center">
             <p>...</p>
             <p><a class="btn btn-primary btn-lg"
-                  href="/login" role="button">Go to Secure</a>
+                  href="/login" role="button">Log In</a>
             </p>
-           <p><a class="btn btn-primary btn-lg"
-                 href="/enterStudent" role="button">Add New Student</a>
-           </p>
-           <p><a class="btn btn-primary btn-lg"
-                 href="/allstudents" role="button">Display All Students</a>
-           </p>
+           <!--<p><a class="btn btn-primary btn-lg"-->
+                 <!--href="/enterStudent" role="button">Add New Student</a>-->
+           <!--</p>-->
+           <!--<p><a class="btn btn-primary btn-lg"-->
+                 <!--href="/allstudents" role="button">Display All Students</a>-->
+           <!--</p>-->
        </div>
     </div>
 </div>
