--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -20,6 +20,10 @@
         <!--<label><input type="checkbox" name="remember"> Remember me</label>-->
     <!--</div>-->
     <div><input type="submit" value="Sign In"  href="/enterStudent"/></div>
+    <!--<div><input type="submit" value="Sign In"  href="/index" role="button"/></div>-->
+
+    <!--<p><a class="btn btn-primary btn-lg" href="/login" role="button">Log In</a>-->
+    <!--</p>-->
 </form>
 </body>
 </html>
