--- a/src/main/resources/templates/resultStudent.html
+++ b/src/main/resources/templates/resultStudent.html
@@ -27,7 +27,7 @@
             <br/><br/>
             <div class="form-group">
                 <!--<a class="btn btn-primary btn-xl" href="/enterEducation" type = "submit">Continue Add Info</a><br/><br/>-->
-                <a class="btn btn-secondary" href="/" type = "submit">Home</a><br/><br/>
+                <!--<a class="btn btn-secondary" href="/" type = "submit">Home</a><br/><br/>-->
                 <a class="btn btn-secondary" href="/enterStudent" type = "submit">Enter Another Student</a><br/><br/>
                 <a class="btn btn-secondary" href="/allStudents" type = "submit">See list of  All Students</a><br/>
             </div>
